--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="Favicon.ico"/>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
